--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(gmc CXX)
 include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
-add_executable(gmc gmc.cpp main.cpp)
+add_executable(gmc src/gmc.cpp src/main.cpp)
 
 target_link_libraries(gmc CONAN_PKG::glad)
 target_link_libraries(gmc CONAN_PKG::glfw)
